# berry

./: .dockerignore  .eslintrc.json  .gitignore  AGENTS.md  DOCKER_SETUP.md  Dockerfile  ENVIRONMENT_SETUP.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  middleware old.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  repomix-output.xml  tsconfig.base.json  tsconfig.json  tsconfig.tsbuildinfo  turbo.json
app/: error.tsx  globals.css  layout.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.release.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
components/: app-sidebar-old.tsx  app-sidebar.tsx  artifact.tsx  async-code-block.tsx  berry-new-chat.tsx  chat-header.tsx  chat.tsx  code-block.tsx  dictate-button.tsx  greeting.tsx  icons.tsx  login-dialog.tsx  login-form.tsx  markdown.tsx  message-reasoning.tsx  message.tsx  messages.tsx  model-selector.tsx  multimodal-input.tsx  nav-user.tsx  search-mode-selector.tsx  searching-indicator.tsx  sidebar-history-item.tsx  sidebar-history.tsx  sidebar-toggle.tsx  sidebar-user-nav.tsx  sign-out-form.tsx  suggested-actions.tsx  team-switcher.tsx  update-information.tsx  visibility-selector.tsx
config/: berry-policy.example.json
deploy/: .env.example  .env.production.example  Caddyfile  PRODUCTION.md  README.md  backup.sh  compose.yaml  dedicated-instance-runbook.md  production-up.sh  restore.sh  server-deploy.sh  up.sh
docs/: acp.md  berry-router.md  (+22 more)
(+441 files in other folders)
